# rag-smith

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  scrapy.cfg
notebooks/: Untitled.ipynb  docling.ipynb  golden_dataset_generator.ipynb  index.ipynb
tbank_crawler/: settings.py
tbank_crawler/spiders/: tbank_help_spider.py
