[project]
name = "rag-smith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "scrapy>=2.15.2",
]

[tool.ruff]
# Python version compatibility
target-version = "py314"
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4",
    "TID", "RET", "ARG", "PTH", "S", "T20"
]
ignore = ["S101", "S311", "T201", "ARG001"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.3.0",
    "ruff>=0.15.12",
]
