[project]
name = "rag-smith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anyio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "docling>=2.92.0",
    "lancedb>=0.30.2",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=1.2.1",
    "nest-asyncio>=1.6.0",
    "pandas>=3.0.2",
    "ragas>=0.4.3",
    "rapidfuzz>=3.14.5",
    "rerankers>=0.10.0",
    "scrapy>=2.15.2",
    "sentence-transformers==4.*",
    "tqdm>=4.67.3",
]

[tool.ruff]
# Python version compatibility
target-version = "py312"
line-length = 100
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4",
    "TID", "RET", "ARG", "S", "T20"
]
ignore = ["S101", "S311", "T201", "ARG001"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.3.0",
    "ruff>=0.15.12",
]
